<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9e5ff"
    android:orientation="vertical"
    tools:context=".activity.User_SignIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="203dp"
        app:srcCompat="@drawable/max_fitness_icn" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="15dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_profile"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:id="@+id/admin_create_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/enter_name"
        android:layout_gravity="center"
        />


    <EditText
        android:id="@+id/admin_create_unique_id"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_unique"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:hint="@string/enter_id"
        android:layout_gravity="center"

        />

    <EditText
        android:id="@+id/admin_create_email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/enter_email"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_email"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"

        />

    <EditText
        android:id="@+id/admin_create_phone_num"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:hint="@string/user_phone_num"
        android:inputType="phone"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_phone"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/user_start_date_btn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:background="@drawable/btn_radius"
        android:text="Start Date"
        android:textSize="10sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/white"
        />
    <Spinner
        android:id="@+id/user_package_spinner"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_height="50dp"
        />
</LinearLayout>



    <TextView
        android:id="@+id/user_start_date_view"
        android:layout_width="134dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="Start Date"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/royal_blue"
        android:layout_marginLeft="40dp"
        android:textSize="18sp"
        />
</LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/create_package"
        android:layout_width="251dp"
        android:layout_height="66dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_radius"
        android:text="@string/create_package"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="17sp"
        />
</LinearLayout>